--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tsyringe": "^4.5.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.12"
+    "@types/express": "^4.17.12",
+    "jest": "^27.0.5"
   }
 }
