--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Luna <bedgowns@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register src/index.ts"
+    "dev": "ts-node -r tsconfig-paths/register src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -16,8 +17,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "jest": "^27.0.5",
     "module-alias": "^2.2.2",
-    "tsconfig-paths": "^3.9.0"
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.3.4"
   }
 }
