--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "baseUrl": "./",
     "paths": {
       "@modules/*" : ["src/modules/*"],
-      "@components/*" : ["src/components/*"]
+      "@components/*" : ["src/components/*"],
+      "@common/*" : ["src/common/*"]
     },
     "esModuleInterop": true,
     "experimentalDecorators": true,
