--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "paths": {
       "@modules/*" : ["src/modules/*"],
       "@components/*" : ["src/components/*"],
-      "@common/*" : ["src/common/*"]
+      "@common/*" : ["src/common/*"],
+      "@static/*" : ["src/static/*"]
     },
     "esModuleInterop": true,
     "experimentalDecorators": true,
