--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "express": "^4.17.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.5.0"
+    "tsyringe": "^4.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/pg": "^8.6.0",
+    "@types/uuid": "^8.3.1",
     "jest": "^27.0.5",
     "module-alias": "^2.2.2",
     "ts-node": "^10.0.0",
