--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "tslog": "^3.2.0",
     "tsyringe": "^4.5.0",
     "uuid": "^8.3.2",
     "ws": "^7.5.2"
