--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.3.4"
-  }
+  },
+  "packageManager": "yarn@3.0.0"
 }
