--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
   "license": "MIT",
   "scripts": {
     "discordBot": "ts-node -r tsconfig-paths/register src/discordBot.ts",
-    "socketServer" : "ts-node -r tsconfig-paths/register src/socketServer.ts",
-    "expressServer" : "ts-node -r tsconfig-paths/register src/expressServer.ts",
-    "test": "jest"
+    "socketServer": "ts-node -r tsconfig-paths/register src/socketServer.ts",
+    "expressServer": "ts-node -r tsconfig-paths/register src/expressServer.ts"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bcrypt": "^5.ya0.1",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "tslog": "^3.2.0",
@@ -26,14 +23,10 @@
     "ws": "^7.5.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.12",
-    "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.5.4",
     "@types/pg": "^8.6.0",
     "@types/uuid": "^8.3.1",
     "@types/ws": "^7.4.6",
-    "jest": "^27.0.5",
     "module-alias": "^2.2.2",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
